Revert "Revert "Added analytical tracking.""
This reverts commit 8cd6aa18893628e0920fbfc4d25c8758bbed4d4f.

--- a/public/index.html
+++ b/public/index.html
@@ -5,34 +5,19 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-145327105-1"
+    ></script>
     <script>
-      UPLOADCARE_PUBLIC_KEY = "c18e4aa08d05ce1b6f53";
-      UPLOADCARE_TABS = "file url facebook gdrive gphotos";
-      UPLOADCARE_EFFECTS = "crop,rotate,mirror,flip";
-      UPLOADCARE_IMAGES_ONLY = true;
-      UPLOADCARE_PREVIEW_STEP = true;
-      // UPLOADCARE_CLEARABLE = true;
-      UPLOADCARE_LOCALE_TRANSLATIONS = {
-        file: {
-          one: "Your Photos",
-          other: "Your Photos"
-        },
-        button: {
-          images: {
-            one: "Choose Image",
-            other: "Choose Images"
-          }
-        }
-      };
-    </script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
-    <script src="https://ucarecdn.com/libs/widget-tab-effects/1.x/uploadcare.tab-effects.js"></script>
-    <script>
-      uploadcare.openPanel("#uploader-placeholder");
-    </script>
-    <script>
-      uploadcare.registerTab("preview", uploadcareTabEffects);
+      gtag("config", "UA-145327105-1");
     </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
