--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/t2rlogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -37,7 +37,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Tech2Rent - Professional Gear at an Amateur Price</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
