--- a/login-page-test.html
+++ b/login-page-test.html
@@ -119,12 +119,16 @@
     font-size: 1.3em;
     }
 
+    .round {
+    border-radius: 9px;
+    }
+
   </style>
 <body>
   <div class="login-container">
     <div class="login-box">
       <div class="login-header">
-        <img src="https://cdn.auth0.com/styleguide/1.0.0/img/badge.svg"/>
+        <img class="round" src="t2rlogo1.png"/>
         <h3>Give Yourself the Opportunity</h3>
         <h3>Join the Community</h3>
       </div>
